<?xml version="1.0"?>
<package format="2">
  <name>roboskel_msgs</name>
  <version>1.0.0</version>
  <description>The roboskel_msgs package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>

